[metadata]
name = lechat
version = 0.1.0
url = https://github.com/cganterh/lechat
author = Cristóbal Ganter
author_email = cganterh@gmail.com
description = A chatting plugin for the Le bot.
long_description = file: README.md
keywords = python, python3, telegram-bot, chatbot
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.5
    Topic :: Communications :: Chat

[options]
install_requires = python-telegram-bot~=6.0
py_modules = lechat

[options.entry_points]
le.handlers.chat = le_chat_handler=lechat:handler
